--- a/index.html
+++ b/index.html
@@ -12,25 +12,48 @@
     </header>
     <main>
         <section class="products">
-            <article class="product">
-                <img src="icon1.jpg" alt="Лимонад с клубникой" class="product-icon">
-                <h2>Лимонад с клубникой</h2>
-                <button class="add-to-cart" data-product="1">Добавить в корзину</button>
+            <article class="product" data-product="1">
+                <img src="icon3.jpg" alt="Лимонад_1" class="product-icon">
+                <h2>Лимонад_1</h2>
+                <p>800 р.</p>
             </article>
-            <article class="product">
-                <img src="icon2.jpg" alt="Лимонад с лимоном" class="product-icon">
-                <h2>Лимонад с лимоном</h2>
-                <button class="add-to-cart" data-product="2">Добавить в корзину</button>
+            <article class="product" data-product="2">
+                <img src="icon1.jpg" alt="Лимонад_2" class="product-icon">
+                <h2>Лимонад_2</h2>
+                <p>800 р.</p>
             </article>
-            <article class="product">
-                <img src="icon3.jpg" alt="Лимонад с мятой" class="product-icon">
-                <h2>Лимонад с мятой</h2>
-                <button class="add-to-cart" data-product="3">Добавить в корзину</button>
+            <article class="product" data-product="3">
+                <img src="icon2.jpg" alt="Лимонад_3" class="product-icon">
+                <h2>Лимонад_3</h2>
+                <p>800 р.</p>
             </article>
         </section>
-        <button id="view-cart" onclick="viewCart()">Посмотреть заказ</button>
+        <button id="view-cart">Посмотреть заказ</button>
     </main>
+
+    <!-- Overlay for product details -->
+    <div id="overlay">
+        <div id="overlay-content">
+            <span class="close-btn" onclick="closeOverlay()">×</span>
+            <img id="overlay-icon" src="" alt="Лимонад">
+            <h2 id="overlay-title"></h2>
+            <p id="overlay-description"></p>
+            <p id="overlay-price"></p>
+            <button id="add-to-cart">Добавить в корзину</button>
+        </div>
+    </div>
+
+    <!-- Overlay for cart view -->
+    <div id="cart-overlay">
+        <div id="cart-overlay-content">
+            <span class="close-btn" onclick="closeCartOverlay()">×</span>
+            <h2>Ваш заказ</h2>
+            <div id="cart-items"></div>
+            <p id="cart-total">Итого: 0 р.</p>
+            <button id="checkout">Оформить заказ</button>
+        </div>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
-
