--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <main>
         <section class="products">
             <article class="product" data-product="1">
-                <img src="icon3.jpg" alt="Лимонад с клубникой" class="product-icon">
-                <h2>Лимонад с клубникой</h2>
-                <p>800 р.</p>
+                <img src="icon3.jpg" alt="Лимонад_1" class="product-icon">
+                <h2>Лимонад_1</h2>
+                <p>800&#8381</p>
             </article>
             <article class="product" data-product="2">
-                <img src="icon1.jpg" alt="Лимонад с лимоном" class="product-icon">
-                <h2>Лимонад с лимоном</h2>
-                <p>800 р.</p>
+                <img src="icon1.jpg" alt="Лимонад_2" class="product-icon">
+                <h2>Лимонад_2</h2>
+                <p>800&#8381</p>
             </article>
             <article class="product" data-product="3">
-                <img src="icon2.jpg" alt="Лимонад с мятой" class="product-icon">
-                <h2>Лимонад с мятой</h2>
-                <p>800 р.</p>
+                <img src="icon2.jpg" alt="Лимонад_3" class="product-icon">
+                <h2>Лимонад_3</h2>
+                <p>800&#8381</p>
             </article>
         </section>
     </main>
