--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <section class="products">
             <article class="product" data-product="1">
                 <img src="icon3.jpg" alt="Лимонад_1" class="product-icon">
-                <h2>Лимонад_1</h2>
+                <h2>Круазье</h2>
                 <p>800&#8381</p>
             </article>
             <article class="product" data-product="2">
                 <img src="icon1.jpg" alt="Лимонад_2" class="product-icon">
-                <h2>Лимонад_2</h2>
+                <h2>Имбирь-лимон</h2>
                 <p>800&#8381</p>
             </article>
             <article class="product" data-product="3">
                 <img src="icon2.jpg" alt="Лимонад_3" class="product-icon">
-                <h2>Лимонад_3</h2>
-                <p>800&#8381</p>
+                <h2>Хреновуха</h2>
+                <p>В разработке</p>
             </article>
         </section>
     </main>
