--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </article>
             <article class="product" data-product="2">
                 <img src="icon1.jpg" alt="Лимонад_2" class="product-icon">
-                <h2>Имбирь-лимон</h2>
+                <h2>Имбирь/лимон</h2>
                 <p>800&#8381</p>
             </article>
             <article class="product" data-product="3">
