--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <!-- Кнопка "Добавить в корзину" -->
             <button id="add-to-cart">
-                Добавить в корзину
+                Добавить в заказ
             </button>
         </div>
     </div>
